PROJECT (djbdns)
ADD_LIBRARY (djbdns STATIC alloc.c
alloc_re.c
byte_chr.c
byte_copy.c
byte_diff.c
byte_zero.c
case_diffb.c
dns_dfd.c
dns_domain.c
dns_dtda.c
dns_ip.c
dns_ipq.c
dns_mx.c
dns_name.c
dns_nd.c
dns_packet.c
dns_random.c
dns_rcip.c
dns_rcrw.c
dns_resolve.c
dns_sortip.c
dns_transmit.c
dns_txt.c
env.c
error.c
fmt_ulong.c
iopause.c
ip4_scan.c
ndelay_on.c
open_read.c
openreadclose.c
readclose.c
scan_ulong.c
socket_bind.c
socket_conn.c
socket_tcp.c
socket_udp.c
stralloc_catb.c
stralloc_cats.c
stralloc_copy.c
stralloc_eady.c
stralloc_opyb.c
stralloc_opys.c
stralloc_pend.c
str_chr.c
str_len.c
str_start.c
taia_add.c
taia_approx.c
taia_frac.c
taia_less.c
taia_now.c
taia_pack.c
taia_sub.c
taia_uint.c
tai_pack.c
uint16_pack.c
uint16_unpack.c
uint32_unpack.c )
